          - fix permission problem with service recurring downtimes
          - fix escaping html tags in command definitions (#444)
          - fix complaining about 'null' groups in config tool (#442)
          - fix business process cron entry being remove when updating reports
          - fix problem for reports using contacts with authorized by groups
          - Panorama View:
            - fix adding new connector items
            - fix text labels disappearing on unlock
            - fix ghost items from other dashboards when using geomap
          - Config Tool:
            - fix object browser links
            - use maximum size in command line wizard
            - list references directly on the object page

1.88-2   Sun Mar 29 19:30:58 CEST 2015
          - fix problem with busines process objects

1.88     Sat Mar 28 17:57:53 CET 2015:
          - add host and service notes url macros (Andrew Widdersheim)
          - add host and service duration macro (Andrew Widdersheim)
          - disable IE8 compatiblity mode introduced in 56c92b1 (Andrew Widdersheim)
          - add 'expand_user_macros' option (Andrew Widdersheim)
          - command start/end times round to full minute
          - search now suggests custom variable names too (#450)
          - menu:
            - remove_item can now remove sub links too
            - add is_user function to test for specific users
            - fix problem with removing items for specific users only
          - Panorama View:
            - add geo map
            - add undo function
              - restore point can be created manually
              - autosave creates restore point every 10minutes and when unlocking a dashboard
            - add fullscreen mode
            - add new connector item
            - add new worldclock widget
            - make widgets clonable
            - dashboard are now locked by default
              - popups will only displayed in locked mode for smoother editing